--- a/frontend/src/views/layouts/main.handlebars
+++ b/frontend/src/views/layouts/main.handlebars
@@ -12,8 +12,10 @@
     <script src="https://kit.fontawesome.com/27fe5071b6.js" crossorigin="anonymous"></script>
 
     <title>Menú</title>
+    <link rel="icon" href="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
-<body class="bg-black">
+<body class="bg-black text-white">
     
     {{{body}}}
     
