--- a/frontend/src/views/index.handlebars
+++ b/frontend/src/views/index.handlebars
@@ -1,13 +1,37 @@
 <nav class="navbar navbar-expand-md bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand m-auto px-4" href="home.html">
-            <img src="" alt="icono restaurante" width="60" height="auto">
+        <a class="navbar-brand m-auto px-4" href="index.handlebars">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp" 
+            style="width: 60px;" alt="logo">
         </a>
     </div>
 </nav>
-<h1>prueba hbs</h1>
+<h1 class="text-center p-5">Menús</h1>
 <div id="listaMenu">
-    {{#each lcarta}}
-        <p>{{numero}} {{nombre}} - {{precio}}€</p>
-    {{/each}}
+    <div class="row p-5">
+        {{#each lcarta}}
+
+            <div class="col-sm-12 mb-3">
+                <div class="card mb-3 bg-dark">
+                    <div class="row">
+                        <div class="col-4">
+                            <img class="rounded-start" src="/img/{{this.foto}}.jpg" alt="{{this.foto}}" width="100%">
+                        </div>
+                        <div class="col-8">
+                            <div class="card-body">
+                                <h5 class="card-title">{{this.numero}} {{this.nombre}}</h5>
+                                <p class="card-text px-3">{{this.ingredientes}}</p>
+                                {{#if this.precio}}
+                                    <a href="" class="btn btn-primary">{{this.precio}} €</a>
+                                {{else}}
+                                    <a href="" class="btn btn-primary">GRATIS</a>
+                                {{/if}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        {{/each}}
+    </div>
 </div>
