--- a/frontend/src/views/index.handlebars
+++ b/frontend/src/views/index.handlebars
@@ -15,7 +15,7 @@
                 <div class="card mb-3 bg-dark">
                     <div class="row">
                         <div class="col-4">
-                            <img class="rounded-start" src="/img/{{this.foto}}.jpg" alt="{{this.foto}}" width="100%">
+                            <img class="rounded-start" src="/img/{{this.foto}}" alt="{{this.foto}}" width="100%">
                         </div>
                         <div class="col-8">
                             <div class="card-body">
