--- a/frontend/src/views/admin.handlebars
+++ b/frontend/src/views/admin.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar bg-dark navbar-expand-md">
+<nav class="navbar bg-dark navbar-expand-md" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand m-auto" href="/">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp" 
@@ -11,15 +11,15 @@
         </nav>
 
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/login/admin/platos">Platos</a>
+                    <a class="nav-link active" href="/login/admin/platos">Platos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/login/admin/pendientes">Pendientes</a>
+                    <a class="nav-link" href="/login/admin/pendientes">Pendientes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/login/admin/recibidos">Recibidos</a>
+                    <a class="nav-link" href="/login/admin/recibidos">Recibidos</a>
                 </li>
             </ul>
             <div class="d-flex">
@@ -28,4 +28,41 @@
         </div>
     </div>
 </nav>
-<h1 class="text-center p-5">Admin</h1>
+<h1 class="text-center p-3">Admin</h1>
+<div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-10">
+                <div id="tabla" class="m-5">
+                    <form id="fEditar">
+                        <table class="table table-striped table-responsive-sm">
+                            <tr>
+                                <th class="text-white">Número</th>
+                                <th class="text-white">Nombre</th>
+                                <th class="text-white">Precio</th>
+                                <th class="text-white">Foto</th>
+                                <th class="text-white">Ingredientes</th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                            {{#each lcarta}}
+
+                                <tr>
+                                    <td class="text-light">{{this.numero}}</td>
+                                    <td class="text-light">{{this.nombre}}</td>
+                                    <td class="text-light">{{this.precio}}</td>
+                                    <td class="text-light">{{this.foto}}</td>
+                                    <td class="text-light">{{this.ingredientes}}</td>
+                                    <td class="text-light">
+                                        <i id="edit{{this.numero}}" class="fa-solid fa-pencil"></i>
+                                    </td>
+                                    <td class="text-light"><i id="delete{{this.numero}}" class="fa-solid fa-trash"></i></td>
+                                </tr>
+
+                            {{/each}}
+                        </table>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
