--- a/frontend/src/views/admin.handlebars
+++ b/frontend/src/views/admin.handlebars
@@ -29,6 +29,12 @@
     </div>
 </nav>
 <h1 class="text-center p-3">Admin</h1>
+<div class="nuevo position-relative pt-5">
+    <div class="position-absolute top-50 start-50 translate-middle">
+        <button id="bNuevo" class="btn btn-success">Nuevo Plato</button>
+    </div>
+</div>
+<div id="divNuevo"></div>
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-12 col-md-10">
