--- a/frontend/src/views/admin.handlebars
+++ b/frontend/src/views/admin.handlebars
@@ -34,7 +34,9 @@
         <button id="bNuevo" class="btn btn-success">Nuevo Plato</button>
     </div>
 </div>
-<div id="divNuevo"></div>
+<div id="divNuevo">
+    <form class="row g-3 mx-auto my-3" id="fNuevo"></form>
+</div>
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-12 col-md-10">
@@ -53,7 +55,7 @@
                         {{#each lcarta}}
 
                             <tr>
-                                <td class="text-light" id="numero">{{this.numero}}</td>
+                                <td class="text-light" id="{{this.numero}}numero">{{this.numero}}</td>
                                 <td class="text-light" id="{{this.numero}}nombre">{{this.nombre}}</td>
                                 <td class="text-light" id="{{this.numero}}precio">{{this.precio}}</td>
                                 <td class="text-light" id="{{this.numero}}foto">{{this.foto}}</td>
