--- a/frontend/src/views/index.handlebars
+++ b/frontend/src/views/index.handlebars
@@ -39,4 +39,12 @@
     </div>
 </div>
 
+<footer class="p-4 m-0 border-0 bg-dark">
+    <div class="nuevo position-relative pt-5">
+        <div class="position-absolute top-50 start-50 translate-middle">
+            <button class="btn btn-success"><a href="/login" class="text-white link-underline link-underline-opacity-0">Portal de Gestión</a></button>
+        </div>
+    </div>
+</footer>
+
 <script src="/main.js"></script>
