--- a/frontend/src/views/index.handlebars
+++ b/frontend/src/views/index.handlebars
@@ -1,3 +1,4 @@
+<title>Menú</title>
 <nav class="navbar navbar-expand-md bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand m-auto px-4" href="/">
