--- a/frontend/src/views/recibidos.handlebars
+++ b/frontend/src/views/recibidos.handlebars
@@ -1,3 +1,4 @@
+<title>Platos Recibidos</title>
 <nav class="navbar bg-dark navbar-expand-md" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand m-auto" href="/">
