--- a/frontend/src/views/pedidos.handlebars
+++ b/frontend/src/views/pedidos.handlebars
@@ -32,11 +32,20 @@
 <h1 class="text-center p-3">Platos Pedidos</h1>
 <div class="p-5">
     {{#each lmesa}}
-        <h1 class="mt-3">Mesa {{this.numero}}</h1>
-        <hr>
-        <p>Nº personas: {{this.personas}}</p>
-        {{#each this.pedidos}}
-            <p>{{this}}</p>
-        {{/each}}
+        <div class="px-3">
+            <h1 class="mt-3">Mesa {{this.numero}}</h1>
+            <hr>
+            <p>Nº personas: {{this.personas}}</p>
+            <ul>
+                {{#each ../lplato}}
+                    <li>
+                        {{this.numero}}: {{this.nombre}}
+                        <button onclick="recibido({{this.numero}})" class="ms-3 btn btn-success">Recibido</button>
+                    </li>
+                {{/each}}
+            </ul>
+        </div>
     {{/each}}
 </div>
+
+<script src="/pedidos.js"></script>
