--- a/frontend/src/views/recibidos.handlebars
+++ b/frontend/src/views/recibidos.handlebars
@@ -14,13 +14,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/login/admin">Platos</a>
+                    <a class="nav-link" href="/login/admin">Platos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/login/admin/pendientes">Pendientes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login/admin/recibidos">Recibidos</a>
+                    <a class="nav-link active" href="/login/admin/recibidos">Recibidos</a>
                 </li>
             </ul>
             <div class="d-flex">
@@ -30,3 +30,23 @@
     </div>
 </nav>
 <h1 class="text-center p-3">Platos Recibidos</h1>
+{{#each lmesa}}
+    <div class="px-5 py-3">
+        <div class="px-3">
+            <h1 class="mt-3">Mesa {{this.numero}}</h1>
+            <hr>
+            <p>Nº personas: {{this.personas}}</p>
+            {{#if (lookup ../plato this.numero)}}
+                <ul>
+                    {{#each (lookup ../lplato this.numero)}}
+                        <li>
+                            {{this.numero}}: {{this.nombre}}
+                        </li>
+                    {{/each}}
+                </ul>
+            {{else}}
+                <p class="text-center">Aún no ha recibido ningún plato la mesa {{this.numero}}</p>
+            {{/if}}
+        </div>
+    </div>
+{{/each}}
