--- a/frontend/src/views/admin.handlebars
+++ b/frontend/src/views/admin.handlebars
@@ -17,6 +17,9 @@
                     <a class="nav-link active" href="/login/admin">Platos</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/login/admin/mesas">Mesas</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/login/admin/pendientes">Pendientes</a>
                 </li>
                 <li class="nav-item">
