--- a/frontend/src/views/mesas.handlebars
+++ b/frontend/src/views/mesas.handlebars
@@ -1,4 +1,4 @@
-<title>Platos Recibidos</title>
+<title>Mesas</title>
 <nav class="navbar bg-dark navbar-expand-md" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand m-auto" href="/">
@@ -17,13 +17,13 @@
                     <a class="nav-link" href="/login/admin">Platos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login/admin/mesas">Mesas</a>
+                    <a class="nav-link active" href="/login/admin/mesas">Mesas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/login/admin/pendientes">Pendientes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/login/admin/recibidos">Recibidos</a>
+                    <a class="nav-link" href="/login/admin/recibidos">Recibidos</a>
                 </li>
             </ul>
             <div class="d-flex">
@@ -32,27 +32,4 @@
         </div>
     </div>
 </nav>
-<h1 class="text-center p-3">Platos Recibidos</h1>
-{{#each lmesa}}
-    <div class="px-5 py-3">
-        <div class="px-3">
-            <h1 class="mt-3">Mesa {{this.numero}}</h1>
-            <hr>
-            <p>Nº personas: {{this.personas}}</p>
-            {{#if (lookup ../lplato this.numero)}}
-                <ul>
-                    {{#each (lookup ../lplato this.numero)}}
-                        <li>
-                            {{this.numero}}: {{this.nombre}}
-                        </li>
-                    {{/each}}
-                </ul>
-                {{#if (lookup ../Mprecio this.numero)}}
-                    <h5>Cuenta: {{lookup ../Mprecio this.numero}}€</h5>
-                {{/if}}
-            {{else}}
-                <p class="text-center">Aún no ha recibido ningún plato la mesa {{this.numero}}</p>
-            {{/if}}
-        </div>
-    </div>
-{{/each}}
+<h1 class="text-center p-3">Mesas</h1>
