--- a/frontend/src/views/pedidos.handlebars
+++ b/frontend/src/views/pedidos.handlebars
@@ -17,6 +17,9 @@
                     <a class="nav-link" href="/login/admin">Platos</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/login/admin/mesas">Mesas</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" href="/login/admin/pendientes">Pendientes</a>
                 </li>
                 <li class="nav-item">
@@ -36,14 +39,18 @@
             <h1 class="mt-3">Mesa {{this.numero}}</h1>
             <hr>
             <p>Nº personas: {{this.personas}}</p>
-            <ul>
-                {{#each (lookup ../lplato this.numero)}}
-                    <li>
-                        {{this.numero}}: {{this.nombre}}
-                        <button onclick="recibido({{../this.numero}}, {{this.numero}})" class="ms-3 btn btn-success">Recibido</button>
-                    </li>
-                {{/each}}
-            </ul>
+            {{#if (lookup ../lplato this.numero)}}
+                <ul>
+                    {{#each (lookup ../lplato this.numero)}}
+                        <li>
+                            {{this.numero}}: {{this.nombre}}
+                            <button onclick="recibido({{../this.numero}}, {{this.numero}})" class="ms-3 btn btn-success">Recibido</button>
+                        </li>
+                    {{/each}}
+                </ul>
+            {{else}}
+                <p class="text-center">Aún no ha pedido ningún plato la mesa {{this.numero}}</p>
+            {{/if}}
         </div>
     </div>
 {{/each}}
