--- a/frontend/src/views/mesas.handlebars
+++ b/frontend/src/views/mesas.handlebars
@@ -33,3 +33,25 @@
     </div>
 </nav>
 <h1 class="text-center p-3">Mesas</h1>
+<div class="nuevo position-relative pt-5">
+    <div class="position-absolute top-50 start-50 translate-middle">
+        <button id="bNuevo" class="btn btn-success">Nueva Mesa</button>
+    </div>
+</div>
+<div id="divNuevo">
+    <form class="row g-3 mx-auto my-3" id="fNuevo"></form>
+</div>
+<div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 p-5">
+    {{#each lmesa}}
+    <div class="col">
+        <div class="card bg-dark">
+            <div class="card-body">
+                <h5 class="card-title text-white">Mesa {{this.numero}}</h5>
+                <p class="card-text text-white">Número de personas : {{this.personas}} personas</p>
+            </div>
+        </div>
+    </div>
+    {{/each}}
+</div>
+
+<script src="/mesas.js"></script>
