--- a/frontend/src/views/mesas.handlebars
+++ b/frontend/src/views/mesas.handlebars
@@ -41,13 +41,14 @@
 <div id="divNuevo">
     <form class="row g-3 mx-auto my-3" id="fNuevo"></form>
 </div>
-<div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 p-5">
+<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 p-5">
     {{#each lmesa}}
     <div class="col">
         <div class="card bg-dark">
             <div class="card-body">
                 <h5 class="card-title text-white">Mesa {{this.numero}}</h5>
                 <p class="card-text text-white">Número de personas : {{this.personas}} personas</p>
+                <a href="http://127.0.0.1:3000/mesa/{{this._id}}">http://127.0.0.1:3000/mesa/{{this._id}}</a>
             </div>
         </div>
     </div>
