--- a/frontend/src/views/menu.handlebars
+++ b/frontend/src/views/menu.handlebars
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/styles/menu.css">
+</style>
 <title>Menú</title>
 <nav class="navbar navbar-expand-md bg-dark">
     <div class="container-fluid">
@@ -40,7 +42,7 @@
     </div>
 </div>
 
-<a href="/seleccionar-comida" style="position:fixed;" class="button-fixed">Realizar pedido</a>
+<button class="floating-button btn btn-success">Pedir</button>
 
 <footer class="p-4 m-0 border-0 bg-dark">
     <div class="nuevo position-relative pt-5">
