--- a/frontend/src/views/menu.handlebars
+++ b/frontend/src/views/menu.handlebars
@@ -30,7 +30,7 @@
                                     <button class="btn btn-primary" type="button" onclick="this.parentNode.querySelector('input[type=number]').stepUp()">+</button>
                                 </div>
                                 {{#if this.precio}}
-                                    <a href="" class="btn btn-primary">{{this.precio}} €</a>
+                                    <div href="" class="btn btn-primary">{{this.precio}} €</div>
                                 {{/if}}
                             </div>
                         </div>
