--- a/frontend/src/views/menu.handlebars
+++ b/frontend/src/views/menu.handlebars
@@ -25,12 +25,12 @@
                                 <h5 class="card-title text-white">{{this.numero}}. {{this.nombre}}</h5>
                                 <p class="card-text px-3 text-white">{{this.ingredientes}}</p>
                                 <div class="d-flex align-items-center gap-2 my-3" style="max-width: 150px">
-                                    <button class="btn btn-primary" type="button" onclick="this.parentNode.querySelector('input[type=number]').stepDown()">-</button>
-                                    <input type="number" value="0" max="10" min="0" class="form-control text-center plato{{this.numero}}">
-                                    <button class="btn btn-primary" type="button" onclick="this.parentNode.querySelector('input[type=number]').stepUp()">+</button>
+                                    <button class="btn btn-primary btn-input" type="button" onclick="menos({{this.numero}});this.parentNode.querySelector('input[type=number]').stepDown()">-</button>
+                                    <input type="number" id="plato{{this.numero}}" value="0" max="10" min="0" class="form-control text-center">
+                                    <button class="btn btn-primary btn-input" type="button" onclick="mas({{this.numero}});this.parentNode.querySelector('input[type=number]').stepUp()">+</button>
                                 </div>
                                 {{#if this.precio}}
-                                    <div href="" class="btn btn-primary">{{this.precio}} €</div>
+                                    <div id="precio{{this.numero}}" class="btn btn-primary">{{this.precio}} €</div>
                                 {{/if}}
                             </div>
                         </div>
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-<button class="floating-button btn btn-success" onclick="pedir({{ultimo.numero}})">Pedir</button>
+<button class="floating-button btn btn-success" id="pedir" onclick="pedir({{ultimo.numero}})">Pedir</button>
 
 <footer class="p-4 m-0 border-0 bg-dark">
     <div class="nuevo position-relative pt-5">
