--- a/frontend/src/views/menu.handlebars
+++ b/frontend/src/views/menu.handlebars
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-<button class="floating-button btn btn-success" id="pedir" onclick="pedir({{ultimo.numero}})">Pedir</button>
+<button class="floating-button btn btn-success" id="pedir" onclick="pedir({{ultimo.numero}},{{mesa.numero}})">Pedir</button>
 
 <footer class="p-4 m-0 border-0 bg-dark">
     <div class="nuevo position-relative pt-5">
