--- a/frontend/src/views/index.handlebars
+++ b/frontend/src/views/index.handlebars
@@ -9,27 +9,24 @@
 </nav>
 <h1 class="text-center p-5">Menús</h1>
 <div id="listaMenu">
-    <div class="row p-5">
-        {{#each lcarta}}
-
-            <div class="col-sm-12 mb-3">
-                <div class="card mb-3 bg-dark">
-                    <div class="row">
-                        <div class="col-4">
-                            <img class="rounded-start" src="/img/{{this.foto}}" alt="{{this.foto}}" width="100%">
-                        </div>
-                        <div class="col-8">
-                            <div class="card-body">
-                                <h5 class="card-title text-white">{{this.numero}}. {{this.nombre}}</h5>
-                                <p class="card-text px-3 text-white">{{this.ingredientes}}</p>
-                            </div>
-                        </div>
+    {{#each lcarta}}
+        <div class="card mb-3 bg-dark m-3">
+            <div class="row">
+                <div class="col-lg-4">
+                    <img class="rounded-start" src="/img/{{this.foto}}" alt="{{this.foto}}" width="100%">
+                </div>
+                <div class="col-lg-8">
+                    <div class="card-body">
+                        <h5 class="card-title text-white">{{this.numero}}. {{this.nombre}}</h5>
+                        <p class="card-text"><small class="text-white-50">{{this.ingredientes}}</small></p>
+                        {{#if this.precio}}
+                            <p class="card-text px-3 text-white" id="precio{{this.numero}}">{{this.precio}} €</p>
+                        {{/if}}
                     </div>
                 </div>
             </div>
-
-        {{/each}}
-    </div>
+        </div>
+    {{/each}}
 </div>
 
 <footer class="p-4 m-0 border-0 bg-dark">
