--- a/frontend/src/views/menu.handlebars
+++ b/frontend/src/views/menu.handlebars
@@ -3,7 +3,7 @@
 <title>Menú</title>
 <nav class="navbar navbar-expand-md bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand m-auto px-4" href="/">
+        <a class="navbar-brand m-auto px-4" href="">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp" 
             style="width: 60px;" alt="logo">
         </a>
@@ -11,35 +11,31 @@
 </nav>
 <h1 class="text-center p-5">Menús mesa {{mesa.numero}}</h1>
 <div id="listaMenu">
-    <div class="row p-5">
-        {{#each lcarta}}
+    {{#each lcarta}}
 
-            <div class="col-sm-12 mb-3">
-                <div class="card mb-3 bg-dark">
-                    <div class="row">
-                        <div class="col-4">
-                            <img class="rounded-start" src="/img/{{this.foto}}" alt="{{this.foto}}" width="100%">
-                        </div>
-                        <div class="col-8">
-                            <div class="card-body">
-                                <h5 class="card-title text-white">{{this.numero}}. {{this.nombre}}</h5>
-                                <p class="card-text px-3 text-white">{{this.ingredientes}}</p>
-                                <div class="d-flex align-items-center gap-2 my-3" style="max-width: 150px">
-                                    <button class="btn btn-primary btn-input" type="button" onclick="menos({{this.numero}});this.parentNode.querySelector('input[type=number]').stepDown()">-</button>
-                                    <input type="number" id="plato{{this.numero}}" value="0" max="10" min="0" class="form-control text-center">
-                                    <button class="btn btn-primary btn-input" type="button" onclick="mas({{this.numero}});this.parentNode.querySelector('input[type=number]').stepUp()">+</button>
-                                </div>
-                                {{#if this.precio}}
-                                    <div id="precio{{this.numero}}" class="btn btn-primary">{{this.precio}} €</div>
-                                {{/if}}
-                            </div>
+        <div class="card mb-3 bg-dark m-3">
+            <div class="row">
+                <div class="col-lg-4">
+                    <img class="rounded-start" src="/img/{{this.foto}}" alt="{{this.foto}}" width="100%">
+                </div>
+                <div class="col-lg-8">
+                    <div class="card-body">
+                        <h5 class="card-title text-white">{{this.numero}}. {{this.nombre}}</h5>
+                        <p class="card-text"><small class="text-white-50">{{this.ingredientes}}</small></p>
+                        {{#if this.precio}}
+                            <p class="card-text px-3 text-white" id="precio{{this.numero}}">{{this.precio}} €</p>
+                        {{/if}}
+                        <div class="d-flex align-items-center gap-2 my-3 mx-auto" style="max-width: 150px">
+                            <button class="btn btn-primary btn-input" type="button" onclick="menos({{this.numero}});this.parentNode.querySelector('input[type=number]').stepDown()">-</button>
+                            <input type="number" id="plato{{this.numero}}" value="0" max="10" min="0" class="form-control text-center">
+                            <button class="btn btn-primary btn-input" type="button" onclick="mas({{this.numero}});this.parentNode.querySelector('input[type=number]').stepUp()">+</button>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
-        {{/each}}
-    </div>
+    {{/each}}
 </div>
 
 <button class="floating-button btn btn-success" id="pedir" onclick="pedir({{ultimo.numero}},{{mesa.numero}})">Pedir</button>
