--- a/frontend/src/views/admin.handlebars
+++ b/frontend/src/views/admin.handlebars
@@ -38,7 +38,7 @@
         <button id="bNuevo" class="btn btn-success">Nuevo Plato</button>
     </div>
 </div>
-<div id="divNuevo">
+<div class="d-flex justify-content-center" id="divNuevo">
     <form class="row g-3 mx-auto my-3" id="fNuevo"></form>
 </div>
 <div class="container-fluid">
