--- a/frontend/src/views/mesas.handlebars
+++ b/frontend/src/views/mesas.handlebars
@@ -38,7 +38,7 @@
         <button id="bNuevo" class="btn btn-success">Nueva Mesa</button>
     </div>
 </div>
-<div id="divNuevo">
+<div class="d-flex justify-content-center" id="divNuevo">
     <form class="row g-3 mx-auto my-3" id="fNuevo"></form>
 </div>
 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 p-5">
