--- a/frontend/src/views/admin.handlebars
+++ b/frontend/src/views/admin.handlebars
@@ -1,4 +1,5 @@
 <title>Admin</title>
+<link rel="stylesheet" href="style/admin.css">
 <nav class="navbar bg-dark navbar-expand-md" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand m-auto" href="/">
