--- a/frontend/src/views/menu.handlebars
+++ b/frontend/src/views/menu.handlebars
@@ -27,7 +27,7 @@
                         {{/if}}
                         <div class="d-flex align-items-center gap-2 my-3 mx-auto" style="max-width: 150px">
                             <button class="btn btn-primary btn-input" type="button" onclick="menos({{this.numero}});this.parentNode.querySelector('input[type=number]').stepDown()">-</button>
-                            <input type="number" id="plato{{this.numero}}" value="0" max="10" min="0" class="form-control text-center">
+                            <input type="number" id="plato{{this.numero}}" value="0" max="10" min="0" class="form-control text-center bg-dark text-white border-0">
                             <button class="btn btn-primary btn-input" type="button" onclick="mas({{this.numero}});this.parentNode.querySelector('input[type=number]').stepUp()">+</button>
                         </div>
                     </div>
