--- a/frontend/src/views/index.handlebars
+++ b/frontend/src/views/index.handlebars
@@ -2,8 +2,7 @@
 <nav class="navbar navbar-expand-md bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand m-auto px-4" href="/">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp" 
-            style="width: 60px;" alt="logo">
+            <img src="/img/lotus.webp" style="width: 60px;" alt="logo">
         </a>
     </div>
 </nav>
