--- a/frontend/src/views/admin.handlebars
+++ b/frontend/src/views/admin.handlebars
@@ -3,8 +3,7 @@
 <nav class="navbar bg-dark navbar-expand-md" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand m-auto" href="/">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp" 
-            style="width: 60px;" alt="logo">
+            <img src="/img/lotus.webp" style="width: 60px;" alt="logo">
         </a>
         <nav class="navbar navbar-dark bg-dark">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
