--- a/frontend/src/views/layouts/main.handlebars
+++ b/frontend/src/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/27fe5071b6.js" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp">
+    <link rel="icon" href="/img/lotus.webp">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body class="bg-black text-white">
