--- a/frontend/src/views/admin.handlebars
+++ b/frontend/src/views/admin.handlebars
@@ -1,5 +1,4 @@
 <title>Admin</title>
-<link rel="stylesheet" href="style/admin.css">
 <nav class="navbar bg-dark navbar-expand-md" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand m-auto" href="/">
@@ -80,3 +79,5 @@
         </div>
     </div>
 </div>
+
+<script src="/admin.js"></script>
