--- a/frontend/public/styles/style.css
+++ b/frontend/public/styles/style.css
@@ -10,6 +10,13 @@ i:hover{
     scale: 1.3;
 }
 
+#home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+}
+
 ::-webkit-scrollbar {
     width: 5px;
 }
