--- a/frontend/public/styles/style.css
+++ b/frontend/public/styles/style.css
@@ -15,6 +15,8 @@ i:hover{
     justify-content: center;
     align-items: center;
     height: 80vh;
+    background-image: url(../img/fondo.webp);
+    background-size: cover;
 }
 
 ::-webkit-scrollbar {
